changed everything for no goddamn reason

--- a/index.html
+++ b/index.html
@@ -16,35 +16,43 @@
 
 </head>
 <body>
-    <section class="main top" style="grid-template-columns: 29% 35.5% 35.5%">
-    <a class="name">Mikki</a>
-    <a class="flip about">About</a>
-    <a href="mailto:info@mikki.studio" target="_blank" class="flip list">Contact</a>
+   
+    <!--<a class="flip about">About</a>-->
+   <!-- <a href="mailto:info@mikki.studio" target="_blank" class="flip list">Contact</a>-->
     <!--<a class="flip email" href="mailto:mikki@janower.net" target="_blank">@</a>-->
-    </section>
+  
 
 <!--<div class="querytown"></div>-->
 <!--------------------------insert page-specific information in this section ONLY----------------------->
 <section id="fullindex" style="display:none;">
 <div id="aboutContainer">
     <div id="about" style="display:none;">
-        <div class="p"><p>Mikki Janower is an interdisciplinary designer and researcher logging on from Brooklyn, New York.</p>
-            <br><p>She's currently working with <a href="https://www.nytimes.com/" tagret="_blank">The New York Times;</a> <a href="https://thecreativeindependent.com/archive/" target="_blank">The Creative Independent</a>; and clients across media, music, and the arts. Previously, she was a research fellow at <a href="https://www.guggenheim.org" target="_blank">The Guggenheim Museum</a>. She received a <a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">TDK Award</a> in 2020.</p></div> 
-        <div class="contact"><a href="mailto:info@mikki.studio" target="_blank">Email</a>&nbsp/ <a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a>&nbsp/ <a href="https://twitter.com/mikkijanower" target="_blank"> Twitter</a> / <a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a> <br><span>Resume available upon request</span><br><!--<a href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>-->
-            <div class="clients"> <br><p style="font-size:12px; opacity:.6; margin-bottom:4px;">Select Clients</p><p style="font-size:12px">
-                <a href="https://theglasshouse.org" target="_blank">The Glass House</a><br>
-                <a href="https://jewishcurrents.org" target="_blank">Jewish Currents</a><br>
-                <a href="https://undocumentedmigrationproject.org" target="_blank">Undocumented Migration Project</a><br>
-                <a href="https://acompi.nyc" target="_blank">ACOMPI</a><br>
-                <a href="https://www.instagram.com/mall.nyc/" target="_blank">Mall NYC</a><br>
-                <a href="https://nike.com" target="_blank">Nike</a><br>
-                <a href="https://kickstarter.com" target="_blank">Kickstarter</a><br>
-                Lea Architecture<br>
-                Zone 6 Management<br>
-                Princeton University</p></div>
-        </div>
-      <!--  <img src="assets/headshot.jpg"> -->
-    </div>
+        <a class="name">Mikki</a>
+        <div class="p"><p>Mikki Janower is an interdisciplinary designer and researcher logging on from Brooklyn, New York. She's currently working with <a href="https://www.nytimes.com/" tagret="_blank">The New York Times;</a> <a href="https://thecreativeindependent.com/archive/" target="_blank">The Creative Independent</a>; and clients across media, music, and the arts. Previously, she was a research fellow at <a href="https://www.guggenheim.org" target="_blank">The Guggenheim Museum</a>.</div> 
+        <section class = "twocols">
+            <div class="contact"><p style="opacity:.6; margin-bottom:4px;">Contact</p><a href="mailto:info@mikki.studio" target="_blank">Email</a><br><a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a><br><a href="https://twitter.com/mikkijanower" target="_blank"> Twitter</a><br><a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a><!--<br><a href="https://www.goodreads.com/user/show/95316335-mikki-janower" target = "_blank">Goodreads</a><br>--></div>
+            <div class="press"><p style="opacity:.6; margin-bottom:4px;">Press</p><p><a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">TDK Awards 2020</a><br><a href="https://www.commonfield.org/convenings/4496/program/4858/a-community-is-a-garden-tools-for-collaboration" target="_blank">Common Fields: Tools for Collaboration</a><br><a href="https://readymag.com/u1881633060/2361167/" target="_blank">Guggenheim: Sustainable Futures</a><br><a href="https://samfoxschool.wustl.edu/people/alumni-spotlights/19-mikki-janower-bfa-in-communication-design-20" target="_blank">Sam Fox Alumni Spotlight</a></p></div>
+        </section>
+    
+        <section class="clients">
+           <div class="col1">
+            <p style="opacity:.6; margin-bottom:4px;">Select Clients</p>
+            <a href="https://theglasshouse.org" target="_blank">The Glass House</a><br>
+            <a href="https://jewishcurrents.org" target="_blank">Jewish Currents</a><br>
+            <a href="https://undocumentedmigrationproject.org" target="_blank">Undocumented Migration Project</a><br>
+            <a href="https://acompi.nyc" target="_blank">ACOMPI</a><br>
+            Princeton University
+           </div>
+              
+           <div class="col2">
+            <p style="opacity:0; margin-bottom:4px;">Select Clients</p>
+            Lea Architecture<br>
+            <a href="https://nike.com" target="_blank">Nike</a><br>
+            <a href="https://kickstarter.com" target="_blank">Kickstarter</a><br>
+            <a href="https://www.instagram.com/mall.nyc/" target="_blank">Mall NYC</a><br>
+            Zone 6 Management
+           </div>
+        </section>
 </div>
 
 <div class="listing">
