--- a/spaceopera.html
+++ b/spaceopera.html
@@ -29,8 +29,7 @@
         <img src="spaceopera/spaceopera1.jpeg">  
           <!--  <div id="label"><span class="labelita">Space Opera</span><span class="labelreg">2022</span></div>-->
     </div>
-    <div id="description"><p>Cover art for vol. 61 of <a href = "https://thebaffler.com/" target="_blank">The Baffler</a>. The simple design uses found footage from the Apollo Missions. 
-    <div class="detail"><p>Art direction by <a href="https://noideas.website/" target="_blank">No Ideas</a>.</a></p></div>
+    <div id="description"><p>Cover art for vol. 61 of <a href = "https://thebaffler.com/" target="_blank">The Baffler</a>. The simple design uses found footage from the Apollo Missions.</p><p>Art direction by <a href="https://noideas.website/" target="_blank">No Ideas</a>.</p></div>
 </div>
 
     <div id="gallery">
