--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="aboutContainer">
     <div id="about" style="display:none;">
         <a class="name">Mikki</a>
-        <div class="p"><p>Mikki Janower is an interdisciplinary designer and researcher logging on from Brooklyn, New York. She's currently working with <a href="https://www.nytimes.com/" tagret="_blank">The New York Times;</a> <a href="https://thecreativeindependent.com/archive/" target="_blank">The Creative Independent</a>; and clients across media, music, and the arts. Previously, she was a research fellow at <a href="https://www.guggenheim.org" target="_blank">The Guggenheim Museum</a>.</div> 
+        <div class="p"><p>Mikki Janower is an interdisciplinary designer and researcher logging on from Brooklyn, New York. She's currently working for <a href="https://www.nytimes.com/" tagret="_blank">The New York Times;</a> <a href="https://thecreativeindependent.com/archive/" target="_blank">The Creative Independent</a>; and clients across media, music, and the arts.</div> 
         <section class = "twocols">
             <div class="contact"><p style="opacity:.6; margin-bottom:4px;">Contact</p><a href="mailto:info@mikki.studio" target="_blank">Email</a><br><a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a><br><a href="https://twitter.com/mikkijanower" target="_blank"> Twitter</a><br><a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a><!--<br><a href="https://www.goodreads.com/user/show/95316335-mikki-janower" target = "_blank">Goodreads</a><br>--></div>
             <div class="press"><p style="opacity:.6; margin-bottom:4px;">Press</p><p><a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">TDK Awards 2020</a><br><a href="https://www.commonfield.org/convenings/4496/program/4858/a-community-is-a-garden-tools-for-collaboration" target="_blank">Common Fields: Tools for Collaboration</a><br><a href="https://readymag.com/u1881633060/2361167/" target="_blank">Guggenheim: Sustainable Futures</a><br><a href="https://samfoxschool.wustl.edu/people/alumni-spotlights/19-mikki-janower-bfa-in-communication-design-20" target="_blank">Sam Fox Alumni Spotlight</a></p></div>
@@ -67,9 +67,8 @@
 <div class="listing">
     <div class="info"><span class="title" data-title="nytimes" data-link="nytimes.html">Design and AD</span>
     <br><span class="description">The New York Times</span></div>
-<div class="extender" data-link="nytimes.html" data-target="" style="display:none;"> <div class="words" style="display:none;"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
-   <br><br>Spanning gender politics, decolonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>
-    <div class="images"><img src="nytimes/nyt15.png"><img src="nytimes/nyt152.png"></div>
+<div class="extender" data-link="nytimes.html" data-target="" style="display:none;">
+    <div class="images"><img src="nytimes/nyt15.png"><img src="nytimes/powell-obit.png"></div>
 </div>
 </div> 
 
