--- a/spiritmolecule.html
+++ b/spiritmolecule.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Mikki Janower — Reflections on Practice</title>
+    <title>mikki.studio</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
 </head>
 <body>
     <section class="top sticky">
-    <a class="name">Mikki</a>
+        <a class="name">mikki.studio</a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">The Spirit Molecule</a>
      <!--<a class="flip index">Index</a>-->
