--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
 
 <head>
-    <title>Mikki Janower</title>
+    <title>mikki.studio</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="assets/favicon-02.png"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css"></a>
     <link rel="stylesheet" href="css/style.css">
 
@@ -27,8 +27,8 @@
 <section id="fullindex" style="display:none;">
 <div id="aboutContainer">
     <div id="about" style="display:none;">
-        <a class="name">Mikki</a>
-        <div class="p"><p>Mikki Janower is an interdisciplinary designer and researcher logging on from Brooklyn, New York. She's currently working for <a href="https://www.nytimes.com/" tagret="_blank">The New York Times;</a> <a href="https://thecreativeindependent.com/archive/" target="_blank">The Creative Independent</a>; and clients across media, music, and the arts.</div> 
+        <a class="name">mikki.studio</a>
+        <div class="p"><p>Mikki Janower is an interdisciplinary designer and researcher logging on from Brooklyn, New York. She's currently working with <a href="https://www.nytimes.com/" tagret="_blank">The New York Times</a> and <a href="https://thecreativeindependent.com/archive/" target="_blank">The Creative Independent</a>; and maintaining an independent practice across media, music, education, and the arts.</div> 
         <section class = "twocols">
             <div class="contact"><p style="opacity:.6; margin-bottom:4px;">Contact</p><a href="mailto:info@mikki.studio" target="_blank">Email</a><br><a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a><br><a href="https://twitter.com/mikkijanower" target="_blank"> Twitter</a><br><a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a><!--<br><a href="https://www.goodreads.com/user/show/95316335-mikki-janower" target = "_blank">Goodreads</a><br>--></div>
             <div class="press"><p style="opacity:.6; margin-bottom:4px;">Press & Awards</p><p><a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">TDK Awards 2020</a><br><a href="https://www.commonfield.org/convenings/4496/program/4858/a-community-is-a-garden-tools-for-collaboration" target="_blank">Common Fields: Tools for Collaboration</a><br><a href="https://readymag.com/u1881633060/2361167/" target="_blank">Guggenheim: Sustainable Futures</a><br><a href="https://samfoxschool.wustl.edu/people/alumni-spotlights/19-mikki-janower-bfa-in-communication-design-20" target="_blank">Sam Fox Alumni Spotlight</a></p></div>
@@ -133,7 +133,7 @@
 
 <div class="listing">
     <div class="info"><span class="title">Super Mario Void</span>
-        <br> <span class="description">A video game for nihilists</span></div>
+        <br> <span class="description">Web design and development</span></div>
     <div class="extender" data-link="mariovoid.html" data-target="" style="display:none;"> 
         <div class="images"><img src="mariovoid/thumbnail.png"><img src="mariovoid/gameover.png"></div>
      
