--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Mikki Janower</title>
+    <title>mikki.studio</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
 </head>
 <body>
     <section class="top sticky">
-    <a class="name">Mikki</a>
+     <a class="name">mikki.studio</a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Joshua Leifer dotcom</a>
     <!--<a class="flip index">Index</a>-->
