--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
     </div>
 </div>
 
-<!--<div class="listing full" data-title="Postcursor / Starrynite" data-link="postcursor.html">
+<div class="listing full" data-title="Postcursor" data-link="postcursor.html">
     <div class="info"><span class="title">Postcursor / Starrynite</span>
-        <br><span class="description">Machine learning as relational design</span></div>
+        <br><span class="description">Machine learning, web development</span></div>
     <div class="extender" data-link="postcursor.html" data-target="" style="display:none;"> 
         <div class="images"><img src="postcursor/postcursor-02.png"><img src="postcursor/postcursor-04.png"></div>
     </div>
-</div>-->
+</div>
 
 <!--<div class="listing full">
     <div class="info"><span class="title" data-title="TCI" data-link="tci.html">Site design updates</span>
