--- a/postcursor.html
+++ b/postcursor.html
@@ -29,11 +29,9 @@
         <img src="postcursor/postcursor-01.png">
         <div id="label"><span class="labelita">Postcursor / Starrynite</span><span class="labelreg">2020</span></div>
     </div>
-    <div id="description"><p><i>Postcursor</i>  and <i>Starrynite</i> are microsites built according to the principles of relational design. Each site uses
-        machine learning to generate graphics according to users’ hand movements,
+    <div id="description"><p><i>Postcursor</i> is a microsite built according to the principles of relational design. The site uses machine learning to generate graphics according to users’ hand movements,
         exploring the notion of process-as-product.</p>
-            <p>Each site uses the same machine learning model to its own end. <i>Postcursor</i> lets users draw cursors across the screen, while <i>Starrynite</i> leaves a trail of stars across the user's backdrop.</p>
-        <div class="detail"><p>Designed and built for the Sam Fox School of Design & Visual Arts.</p><p>Models used: <br>tensorflow.js & handtrack.js</p></div>
+        <div class="detail"><p>Models used: <br>tensorflow.js & handtrack.js</p></div>
     </div>
    
 
