--- a/money-has-no-smell.html
+++ b/money-has-no-smell.html
@@ -19,16 +19,17 @@
     <section class="top sticky">
         <a class="name"></a>
 <!---------------------project title—change meeeeee---------------------------------->
-        <a class="projectTitle">A Community is a Garden</a>
+    <a class="projectTitle">Money Has No Smell</a>
+     <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
-   <section id="project" style="display:none">
+   <section id="project" class="communitypage" style="display:none">
 
     <div id="hero">
         <img src="community/cover.jpg">
     </div>
     <div id="description">
-        <p><i>A Community is a Garden</i> is a toolkit for artistic practice towards grassroots change. Filled with interviews, exercises, and prompts for reflection, the book is an accessible resource for artists, communities, and institutions looking to build and strengthen long-term partnerships.</p>
+        <p><i>Money Has No Smell</i> is a toolkit for artistic practice towards grassroots change. Filled with interviews, exercises, and prompts for reflection, the book is an accessible resource for artists, communities, and institutions looking to build and strengthen long-term partnerships.</p>
         <p>This book was developed over the course of the inaugural Summer Research Practicum at the <a href="https://www.guggenheim.org/" target="_blank">Guggenheim Museum.</a> You can read, print, and share it for free at <a href="https://arena-attachments.s3.amazonaws.com/9400568/b17b697286cc21f202f2f8458bdbc35b.pdf?1604622316" target="_blank">bit.ly/CommunityGardenToolkit</a>.</p>
     <p>A collective effort with Kanyinsola Anifowoshe, <a href="jordanjweber.com" target="_blank">Jordan Weber</a>, <a href="https://arthistory.wustl.edu/people/ila-sheren" target="_blank">Ila N. Sheren</a>, <a href="brianharnetty.com" target="_blank">Brian Harnetty</a>, Cheryl Blosser, Efe Igor, <a href="birdcloset.com" target="_blank">Bird Closet</a>, <a href="genomicgastronomy.com" target="_blank">Center for Genomic Gastronomy</a>, Rob Gee, Alicia Gee, Syd Gee, <a href="prestoncthompson.com" target="_blank">Preston Thompson</a>, <a href="http://jackiiepopjes.com/" target="_blank">and Jackiie Popjes</a>.</p></div>
 </div>
@@ -64,7 +65,7 @@
     </div>
        
         <div id="projfooter">
-            <a class="backbtn flip">Back</a>
+            <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="sober21.html">Next</a>
         </div>
         </section>
@@ -73,12 +74,15 @@
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 
- <section class="bottom"></section>
+<section class="bottom"></section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
+    <script src="js/universal.js"></script>
     <script src="js/projects.js"></script>
+
+
 </body>
 
 </html>
