--- a/majorarcana.html
+++ b/majorarcana.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <section class="arcana top sticky">
-        <a class="name">Mikki</a>
+    <a class="name"></a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Cocktails of the Major Arcana</a>
     <!--<a class="flip index">Index</a>-->
@@ -46,7 +46,7 @@
     </div>
        
         <div id="projfooter">
-            <a class="flip" href="armour.html">Back</a>
+            <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="community.html">Next</a>
         </div>
         </section>
@@ -55,11 +55,7 @@
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 
-    <section class="bottom sticky">
-        <a class="flip" href="https://www.instagram.com/_miikki/" target="_blank">Instagram</a>
-        <a class="flip" href="mailto:info@mikki.studio" target="_blank">Email</a>
-        <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
-    </section>
+<section class="bottom"></section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
