--- a/postcursor.html
+++ b/postcursor.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <section class="top sticky">
-     <a class="name">mikki.studio</a>
+     <a class="name"></a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Postcursor</a>
      <!--<a class="flip index">Index</a>-->
@@ -48,7 +48,7 @@
     </div>
        
         <div id="projfooter">
-            <a class="flip" href="index.html">Back</a>
+            <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="mariovoid.html">Next</a>
         </div>
         </section>
@@ -56,13 +56,8 @@
         <script type="text/javascript">const title= "Postcursor";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-  
-    <section class="bottom sticky">
-        <a class="flip" href="https://www.instagram.com/_miikki/" target="_blank">Instagram</a>
-        <a class="flip" href="mailto:info@mikki.studio" target="_blank">Email</a>
-        <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
-    </section>
-    
+  <section class="bottom"></section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/universal.js"></script>
