--- a/reconnatypeface.html
+++ b/reconnatypeface.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <section class="top sticky">
-    <a class="name">mikki.studio</a>
+    <a class="name"></a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Reconna Typeface</a>
     <!--<a class="flip index">Index</a>-->
@@ -49,7 +49,7 @@
          </div>
        
         <div id="projfooter">
-            <a class="flip" href="index.html">Back</a>
+            <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="foundsoundscapes.html">Next</a>
         </div>
         </section>
@@ -67,15 +67,7 @@
         </script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-    <section id="about" style="display:none;">
-    <p><span class="big">Mikki Janower is a graphic designer and art director based in Brooklyn.</span> Her work reflects her multidisciplinary background, robust visual research, and acute typophilia. She loves freelance projects and collaborations, particularly work skewed towards music and the arts.<br><br>She recently recieved a BFA in Communication Design from Washington University in St. Louis and is currently looking for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
-    <img src="assets/headshot.jpg">    
-</section>
-    <section class="bottom sticky">
-        <a class="flip" href="https://www.instagram.com/_miikki/" target="_blank">Instagram</a>
-        <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
-        <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
-    </section>
+<section class="bottom"></section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
