--- a/tci.html
+++ b/tci.html
@@ -17,7 +17,7 @@
 <body>
     <!--<div class="querytown"></div>-->
     <section class="top sticky">
-        <a class="name">mikki.studio</a>
+        <a class="name"></a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">The Creative Independent</a>
      <!--<a class="flip index">Index</a>-->
@@ -42,7 +42,7 @@
     </div>
        
         <div id="projfooter">
-            <a class="flip" href="index.html">Back</a>
+            <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="discoveryourair.html">Next</a>
         </div>
         </section>
@@ -51,12 +51,7 @@
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
  
-</section>
-    <section class="bottom sticky">
-        <a class="flip" href="https://www.instagram.com/mikki.work/" target="_blank">Instagram</a>
-        <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
-        <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
-    </section>
+<section class="bottom"></section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
