more code cleanup

--- a/armour.html
+++ b/armour.html
@@ -21,7 +21,7 @@
      <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
-<section id="project" class="armourpage" style="display:none">
+<section id="project" style="display:none">
 
     <div id="description"><p>Commissions, collaborations, and fever dreams compiled over the course of four years at <i>Armour</i>.</p>
             <p><i>Armour</i> is Washington University's style & culture publication. As Editor-in-Chief, led a full visual rebrand; comissioned photographs, illustrations, and prose; and oversaw collaborations with <a href="https://unboundbabes.com/" target="_blank">Unbound</a> and <a href="https://www.instagram.com/pebble__shop/" target="_blank">Pebble</a>, among others.</p>
@@ -64,7 +64,7 @@
        
         <div id="projfooter">
             <a class="flip" href="index.html">Back</a>
-            <a class="flip" href="majorarcana.html">Next</a>
+            <a class="flip" href="reflections.html">Next</a>
         </div>
 </section>
 
