--- a/community.html
+++ b/community.html
@@ -65,7 +65,7 @@
        
         <div id="projfooter">
             <a class="backbtn flip">Back</a>
-            <a class="flip" href="sober21.html">Next</a>
+            <a class="flip" href="nytimes.html">Next</a>
         </div>
         </section>
 
