--- a/cyberotica.html
+++ b/cyberotica.html
@@ -23,7 +23,7 @@
      <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
-   <section id="project" class="cyberoticapage" style="display:none">
+   <section id="project" style="display:none">
 
     <div id="hero">
         <img src="cyberotica/radicallove.jpg">  
@@ -71,8 +71,6 @@
             <a class="flip" href="joshualeifer.html">Next</a>
         </div>
         </section>
-
-        <script type="text/javascript">const title= "Cyberotica";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 
