--- a/discoveryourair.html
+++ b/discoveryourair.html
@@ -46,7 +46,7 @@
        
         <div id="projfooter">
             <a class="flip" href="javascript:history.back()">Back</a>
-            <a class="flip" href="postcursor.html">Next</a>
+            <a class="flip" href="sober21.html">Next</a>
         </div>
         </section>
 
