--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -49,7 +49,7 @@
        
         <div id="projfooter">
             <a class="flip" href="javascript:history.back()">Back</a>
-            <a class="flip" href="tci.html">Next</a>
+            <a class="flip" href="discoveryourair.html">Next</a>
         </div>
         </section>
 
