--- a/majorarcana.html
+++ b/majorarcana.html
@@ -18,11 +18,10 @@
     <a class="name"></a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Cocktails of the Major Arcana</a>
-    <!--<a class="flip index">Index</a>-->
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
-    <section id="project" class="majorarcanapage" style="display:none">
+    <section id="project" style="display:none">
 
 
     <div id="hero">
@@ -47,11 +46,9 @@
        
         <div id="projfooter">
             <a class="flip" href="javascript:history.back()">Back</a>
-            <a class="flip" href="community.html">Next</a>
+            <a class="flip" href="postcursor.html">Next</a>
         </div>
         </section>
-
-        <script type="text/javascript">const title= "Cocktails of the Major Arcana";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 
