--- a/mariovoid.html
+++ b/mariovoid.html
@@ -22,7 +22,7 @@
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
-    <section id="project" class="spiritmoleculepage" style="display:none">
+    <section id="project" style="display:none">
 
 
     <div id="hero">
@@ -43,11 +43,9 @@
        
         <div id="projfooter">
             <a class="flip" href="javascript:history.back()">Back</a>
-            <a class="flip" href="armour.html">Next</a>
+            <a class="flip" href="tci5.html">Next</a>
         </div>
         </section>
-
-        <script type="text/javascript">const title= "Super Mario Void";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 <section class="bottom"></section>
