--- a/postcursor.html
+++ b/postcursor.html
@@ -18,11 +18,10 @@
      <a class="name"></a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Postcursor</a>
-     <!--<a class="flip index">Index</a>-->
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
-    <section id="project" class="postcursorpage" style="display:none">
+    <section id="project" style="display:none">
 
 
     <div id="hero">
@@ -49,11 +48,9 @@
        
         <div id="projfooter">
             <a class="flip" href="javascript:history.back()">Back</a>
-            <a class="flip" href="mariovoid.html">Next</a>
+            <a class="flip" href="community.html">Next</a>
         </div>
         </section>
-
-        <script type="text/javascript">const title= "Postcursor";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
   <section class="bottom"></section>
