--- a/reconnatypeface.html
+++ b/reconnatypeface.html
@@ -22,7 +22,7 @@
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
-    <section id="project" class="reconnapage" style="display:none">
+    <section id="project" style="display:none">
 
 
 
@@ -50,7 +50,7 @@
        
         <div id="projfooter">
             <a class="flip" href="javascript:history.back()">Back</a>
-            <a class="flip" href="foundsoundscapes.html">Next</a>
+            <a class="flip" href="armour.html">Next</a>
         </div>
         </section>
 
