--- a/tci5.html
+++ b/tci5.html
@@ -23,7 +23,7 @@
      <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
-   <section id="project" class="tci5page" style="display:none">
+   <section id="project" style="display:none">
 
     <div id="hero">
         <img src="tci5/tci5.png">  
@@ -54,11 +54,9 @@
        
         <div id="projfooter">
             <a class="flip" href="javascript:history.back()">Back</a>
-            <a class="flip" href="joshualeifer.html">Next</a>
+            <a class="flip" href="reconnatypeface.html">Next</a>
         </div>
         </section>
-
-        <script type="text/javascript">const title= "Cyberotica";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 
