--- a/transientgrounds.html
+++ b/transientgrounds.html
@@ -44,11 +44,9 @@
        
         <div id="projfooter">
             <a class="flip" href="javascript:history.back()">Back</a>
-            <a class="flip" href="joshualeifer.html">Next</a>
+            <a class="flip" href="cyberotica.html">Next</a>
         </div>
         </section>
-
-        <script type="text/javascript">const title= "Cyberotica";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 
