--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
   <span>Looking for something? <a href = "mailto:info@mikki.studio">ask away :)</a> </span> <span>Janower 2022</span>
 </div>
 
+<!-----------------scripts and end tags below — do not touch---------->
 </section>  
-    
 
-    <script
+<script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="js/projects.js"></script>
+<script src="js/projects.js"></script>
 
 
 </body>
