--- a/sober21.html
+++ b/sober21.html
@@ -23,7 +23,7 @@
      <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
-   <section id="project" class="sober21page" style="display:none">
+   <section id="project" style="display:none">
 
     <div id="hero">
         <img src="sober21/IMG_6556.jpg">
@@ -61,11 +61,9 @@
        
         <div id="projfooter">
             <a class="flip" href="javascript:history.back()">Back</a>
-            <a class="flip" href="nytimes.html">Next</a>
+            <a class="flip" href="mariovoid.html">Next</a>
         </div>
         </section>
-
-        <script type="text/javascript">const title= "Sober 21";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
  
