moved pages not in use into separate folder

--- a/cyberotica.html
+++ b/cyberotica.html
@@ -15,12 +15,9 @@
 
 </head>
 <body>
-    <!--<div class="querytown"></div>-->
-    <section class="top sticky">
+    <section class="top">
     <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Cyberotica</a>
-     <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
    <section id="project" style="display:none">
@@ -62,7 +59,6 @@
             <img src="cyberotica/coverscan2 copy.jpg">  
             <img src="cyberotica/backcoverwspine copy.jpg">
         </div>
-        <!--<img src="cyberotica/abstract2.jpg">-->
         <img src="cyberotica/index.jpg">
     </div>
        
@@ -70,11 +66,12 @@
             <a class="backbtn flip">Back</a>
             <a class="flip" href="joshualeifer.html">Next</a>
         </div>
-        </section>
+
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-
+</section>
 <section class="bottom"></section>
+<!--<div class="querytown"></div>-->
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
