--- a/discoveryourair.html
+++ b/discoveryourair.html
@@ -14,17 +14,13 @@
 
 </head>
 <body>
-    <section class="top sticky">
+    <section class="top">
     <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Nike: Discover Your Air</a>
-     <!--<a class="flip index">Index</a>-->
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
-    <section id="project" class="discoveryourairpage" style="display:none">
-
-
+    <section id="project" style="display:none">
     <div id="hero">
         <img src="discoveryourair/Bumper-Sticker.jpg">
         <div id="label"><span class="labelita">Nike: Discover Your Air</span><span class="labelreg">2018</span></div>
@@ -48,13 +44,10 @@
             <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="sober21.html">Next</a>
         </div>
-        </section>
-
-        <script type="text/javascript">const title= "Nike: Discover Your Air";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 
-    
+</section>  
 <section class="bottom"></section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
