--- a/majorarcana.html
+++ b/majorarcana.html
@@ -14,9 +14,8 @@
 
 </head>
 <body>
-    <section class="arcana top sticky">
+    <section class="top">
     <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Cocktails of the Major Arcana</a>
     </section>
 
@@ -48,10 +47,9 @@
             <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="postcursor.html">Next</a>
         </div>
-        </section>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-
+</section>
 <section class="bottom"></section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
