--- a/mariovoid.html
+++ b/mariovoid.html
@@ -14,16 +14,13 @@
 
 </head>
 <body>
-    <section class="top sticky">
+    <section class="top">
     <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Super Mario Void</a>
-     <!--<a class="flip index">Index</a>-->
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
     <section id="project" style="display:none">
-
 
     <div id="hero">
             <img src="mariovoid/thumbnail.png">
@@ -45,9 +42,10 @@
             <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="tci5.html">Next</a>
         </div>
-        </section>
+
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
+</section>
 <section class="bottom"></section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
