--- a/reflections.html
+++ b/reflections.html
@@ -14,17 +14,12 @@
 
 </head>
 <body>
-    <section class="top sticky">
+    <section class="top">
         <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
-    <a class="projectTitle">Reflections on Practice</a>
-     <!--<a class="flip index">Index</a>-->
+        <a class="projectTitle">Reflections on Practice</a>
     </section>
-
 <!--------------------------insert project information in this section ONLY----------------------->
     <section id="project" style="display:none">
-
-
     <div id="hero">
             <img src="reflections/IMG_6544-copy.jpg">
             <div id="label"><span class="labelita">Reflections on Practice</span><span class="labelreg">2019</span></div>
