--- a/community.html
+++ b/community.html
@@ -15,15 +15,12 @@
 
 </head>
 <body>
-    <!--<div class="querytown"></div>-->
-    <section class="top sticky">
+    <section class="top">
         <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
         <a class="projectTitle">A Community is a Garden</a>
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
    <section id="project" style="display:none">
-
     <div id="hero">
         <img src="community/cover.jpg">
     </div>
@@ -67,12 +64,9 @@
             <a class="backbtn flip">Back</a>
             <a class="flip" href="nytimes.html">Next</a>
         </div>
-        </section>
-
-        <script type="text/javascript">const title= "A Community is a Garden";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-
+</section>
  <section class="bottom"></section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
