--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -17,14 +17,11 @@
 <body>
     <section class="top sticky">
      <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
-    <a class="projectTitle">Joshua Leifer dotcom</a>
-    <!--<a class="flip index">Index</a>-->
+    <a class="projectTitle">Website: Joshua Leifer</a>
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
-    <section id="project" class="spiritmoleculepage" style="display:none">
-
+    <section id="project" style="display:none">
 
     <div id="hero">
             <img src="joshualeifer/jleifer1.png">
@@ -51,12 +48,9 @@
             <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="discoveryourair.html">Next</a>
         </div>
-        </section>
-
-        <script type="text/javascript">const title= "The Spirit Molecule";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-
+</section>
 <section class="bottom"></section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
