--- a/postcursor.html
+++ b/postcursor.html
@@ -14,9 +14,8 @@
 
 </head>
 <body>
-    <section class="top sticky">
+    <section class="top">
      <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Postcursor</a>
     </section>
 
@@ -50,10 +49,10 @@
             <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="community.html">Next</a>
         </div>
-        </section>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-  <section class="bottom"></section>
+</section>
+<section class="bottom"></section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
