--- a/zzz not in use/foundsoundscapes.html
+++ b/zzz not in use/foundsoundscapes.html
@@ -16,13 +16,11 @@
 <body>
     <section class="top sticky">
     <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Found Soundscapes</a>
-     <!--<a class="flip index">Index</a>-->
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
-    <section id="project" class="soundscapespage" style="display:none">
+    <section id="project" style="display:none">
 
 
     <div id="hero">
@@ -52,11 +50,9 @@
             <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="discoveryourair.html">Next</a>
         </div>
-        </section>
-
-        <script type="text/javascript">const title= "Postcursor";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
+</section>
 <section class="bottom"></section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
